--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
 
   <title>Fun Bus Travel Agency - Solution</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
@@ -19,7 +20,7 @@
 <body>
 
   <header class="main-navigation">
-    <div class="container nav-container">
+    <div class="container nav-container" >
       <h1 class="logo-heading">Fun Bus</h1>
       <nav class="nav">
         <a class="nav-link" href="#">Home</a>
